<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item android:id="@+id/Home"
            android:title="@string/home"
            android:icon="@drawable/home"
            />

        <item android:id="@+id/gedgets"
            android:title="@string/Gadgets"
            android:icon="@drawable/gagets"
            />
        <item android:id="@+id/shop"
            android:title="@string/Gadgets"
            android:icon="@drawable/shop"
            />

    </group>

    <item android:title="@string/Admin">
        <menu>
            <item android:id="@+id/adminpanal"
                android:title="@string/Admin"
                android:icon="@drawable/adminpalnal"
                />
        </menu>
    </item>
    <item android:title="@string/report_about">
        <menu>
            <item android:id="@+id/report_bug"
                android:title="@string/rate_us"
                android:icon="@drawable/report"
                />
            <item android:id="@+id/About"
                android:title="@string/about"
                android:icon="@drawable/about"
                />
        </menu>

    </item>

</menu>