<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4fa2d2"
    tools:context=".AdminLogin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:layout_marginTop="80sp"
        android:src="@mipmap/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="15sp"

        >

        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_margin="10dp"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/login"
                android:textColor="#092BC6"
                android:textSize="25sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/email"
                android:textColor="#092BC6"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#092BC6"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_passwword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberPassword"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:background="@drawable/button_shape"
                android:padding="10sp"
                android:textColor="#092BC6"
                android:text="@string/login"
                android:elevation="5sp"
                android:textSize="30sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>